--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ local.properties
 *.vspscc
 .builds
 *.dotCover
+*.vbw
 
 ## TODO: If you have NuGet Package Restore enabled, uncomment this
 #packages/
