* Pár dolog javítva és bekötve.

--- a/Teszt/verseny/Dev/Config/Config.conf
+++ b/Teszt/verseny/Dev/Config/Config.conf
@@ -1,8 +1,8 @@
 # Játékhoz tartozó konfig fájl. Figyelem! Csak hozzáértõek piszkáljanak bele mert hibát is okozhatnak az átgondolatlan cselekvéssel!
 
 # Globálisan itt kapcsolható be vagy ki a nyomvonal.
-Globalis_Nyomvonal = True
+Globalis_Nyomvonal = False
 # Globálisan itt kapcsolható be vagy ki a szektorok neve.
 Globalis_SzektorNevek = True
 # Itt állítható be hány körös legyen az adott verseny. Maximum 20.
-Globalis_KorokSzama = 5
+Globalis_KorokSzama = 8
