--- a/Nagy Házi/Verseny/Dev/Config/Config.conf
+++ b/Nagy Házi/Verseny/Dev/Config/Config.conf
@@ -1,13 +1,13 @@
 # Játékhoz tartozó konfig fájl. Figyelem! Csak hozzáértõek piszkáljanak bele mert hibát is okozhatnak az átgondolatlan cselekvéssel!
 
 # Globálisan itt kapcsolható be vagy ki a nyomvonal.
-Globalis_Nyomvonal = False
+Globalis_Nyomvonal = True
 # Globálisan itt kapcsolható be vagy ki a szektorok neve.
 Globalis_SzektorNevek = True
 # Globálisan itt kapcsolható be vagy ki a start és célvonal neve.
 Globalis_StartCelVonalNeve = True
 # Itt állítható be hány körös legyen az adott verseny. Maximum 20.
-Globalis_KorokSzama = 5
+Globalis_KorokSzama = 2
 # Itt állítható be a pálya neve.
 Globalis_PalyaNeve = Default.map
 # Globálisan itt kapcsolható be vagy ki a szektorok vonala.
